--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -5,8 +5,8 @@
     position: relative;
     padding-top: 150px;
     mask-image:
-    linear-gradient(to top, rgba(0,0,0,0.0) 1%, black 15%);    /* Нижняя часть */
-    mask-repeat: no-repeat;
+    // linear-gradient(to top, rgba(0,0,0,0.0) 1%, black 15%);    /* Нижняя часть */
+    // mask-repeat: no-repeat;
     &__link {
         max-width: 300px;
         height: 45px;
