real remove mask-image

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -4,7 +4,7 @@
     width: 100%;
     position: relative;
     padding-top: 150px;
-    mask-image:
+    // mask-image:
     // linear-gradient(to top, rgba(0,0,0,0.0) 1%, black 15%);    /* Нижняя часть */
     // mask-repeat: no-repeat;
     &__link {
