--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -4,11 +4,18 @@
     padding: 12px 26px;
     border: none;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 16px;
+    transition: all .5s;
     &__about {
         background: none;
+        &:hover {
+            transform: scale(.95);
+        }
     }
     &__portfolio {
         border-radius: 5px;
+        &:hover {
+            transform: scale(.95);
+        }
     }
 }
