--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
     background: url('../../img/main_bg.png') no-repeat 50%/cover;
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     position: relative;
     padding-top: 150px;
