--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -58,6 +58,10 @@
         column-gap: 25px;
         row-gap: 30px;
         max-width: 100%;
+        button[disabled] {
+            opacity: 0.6;
+            cursor: not-allowed;
+        }
 
     }
     &__input {
@@ -141,3 +145,28 @@
         }
     }
 }
+
+
+.form-loader {
+    display: none;
+    margin-top: 20px;
+    text-align: center;
+    color: #333;
+    font-size: 14px;
+  }
+  
+  .spinner {
+    width: 32px;
+    height: 32px;
+    margin: 0 auto 10px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #1e90ff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
