--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -1,5 +1,6 @@
 .contacts {
     padding: 125px 32px 100px 55px;
+    position: relative;
     label {
         margin-bottom: 0;
     }
@@ -9,6 +10,7 @@
         grid-template-rows: 600px;
         grid-auto-rows: 600px;
         column-gap: 70px;
+        position: relative;
         button[disabled] {
             opacity: 0.6;
             cursor: not-allowed;
@@ -149,24 +151,35 @@
 
 .form-loader {
     display: none;
-    margin-top: 20px;
+    justify-content: center;
     text-align: center;
     color: #333;
     font-size: 14px;
-  }
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+    z-index: 100;
+    bottom: 0;
+    &__content {
+        bottom: 50vh;
+        transform: translateY(50%);
+        position: fixed;
+    }
+}
   
-  .spinner {
-    width: 32px;
-    height: 32px;
-    margin: 0 auto 10px;
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #1e90ff;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
+.spinner {
+width: 32px;
+height: 32px;
+margin: 0 auto 10px;
+border: 4px solid rgba(0, 0, 0, 0.1);
+border-left-color: #1e90ff;
+border-radius: 50%;
+animation: spin 1s linear infinite;
+}
   
-  @keyframes spin {
+@keyframes spin {
     to {
       transform: rotate(360deg);
     }
-  }
+}
