--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -12,6 +12,8 @@
     &__item {
         border: 1px solid #000;
         padding: 30px 30px 25px 30px;
+        text-align: justify;
+        text-wrap: pretty;
         &-icon {
             min-height: 65px;
             display: block;
