updated colot checkbox

--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -143,6 +143,12 @@
             }
             input {
                 cursor: pointer;
+                &:checked {
+                    accent-color: $main-color;
+                    & + label {
+                        color: $main-color;
+                    }
+                }
             }
         }
     }
