--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -1,6 +1,6 @@
 .btn {
     background: $main-color;
-    color: #fff;
+    color: #000;
     padding: 12px 26px;
     border: none;
     font-weight: 700;
