--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -71,14 +71,15 @@
         position: relative;
         width: 100%;
         height: 100%;
-        border: 1px solid #000;
         &-1 {
             grid-column: 1/2;
             grid-row: 1/2;
+
         }
         &-2 {
             grid-column: 2/3;
             grid-row: 1/2;
+
         }
         &-3 {
             display: block;
@@ -86,13 +87,21 @@
             height: 100%;
             grid-column: 1 / 3;
             grid-row: 2 / 3;
-            border: 1px solid #000;
+
             textarea {
                 width: 100%;
                 height: 100%;
                 resize: none;
                 font-size: 14px;
                 padding: 13px 20px;
+                background: $bg-color;
+                border-radius: 3px;
+                border: 1.5px solid #8d8d8d;
+                &:focus {
+                    background: none;
+                    outline: 1.5px solid #8d8d8d;
+                    border: none;
+                }
             }
         }
         input {
@@ -100,6 +109,14 @@
             height: 100%;
             font-size: 14px;
             padding: 13px 20px;
+            background: $bg-color;
+            border-radius: 3px;
+            border: 1.5px solid #8d8d8d;
+            &:focus {
+                background: none;
+                outline: 1.5px solid #8d8d8d;
+                border:none;
+            }
         }
         label {
             color: #000;
@@ -110,7 +127,7 @@
             position: absolute;
             display: block;
             top: -9px;
-            background: #fff;
+            background: $bg-color;
             padding: 0 8px;
             left: 12px;
         }
@@ -143,6 +160,7 @@
             }
             input {
                 cursor: pointer;
+                background: $bg-color;
                 &:checked {
                     accent-color: $main-color;
                     & + label {
