--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -4,20 +4,39 @@
         margin-top: 60px;
         display: grid;
         grid-template-columns: repeat(auto-fill, 250px);
-        grid-template-rows: repeat(2, minmax(250px, auto));
-        grid-auto-rows: minmax(270px, auto);
+        grid-template-rows: repeat(2, minmax(50px, auto));
+        grid-auto-rows: minmax(50px, auto);
         gap: 13px;
         justify-content: center;
+        transition: all 2s linear;
     }
     &__item {
-        border: 1px solid #000;
+        // border: 1px solid #000;
+        border-radius: 30px;
+        // box-shadow: 0 0 5px $main-color;
         padding: 30px 30px 25px 30px;
         text-align: justify;
         text-wrap: pretty;
+        background: rgba(193, 167, 152, .2);
+        // clip-path: rect(0 auto 150px 0 round 10%);
+        // &:hover {
+        //     clip-path: rect(auto auto auto auto round 10%);
+        // }
+        max-height: 150px;
+        overflow: hidden;
+        transition: all 0.3s linear;
+        &:hover {
+            max-height: 100%;
+        }
         &-icon {
-            min-height: 65px;
+            height: 65px;
             display: block;
             line-height: 65px;
+            img {
+                max-width: 100%;
+                height: 100%;
+                justify-self: start;
+            }
         }
         h4 {
             margin-top: 20px;
