--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -2,7 +2,7 @@
     font-size: clamp(24px, 3vw, 36px);
     font-weight: 700;
     &_promo {
-        color: #fff; 
+        color: #000; 
         font-size: clamp(32px, 6vw, 48px);
         line-height: 1.3;
         margin-top: 10px;
@@ -22,7 +22,7 @@
     font-size: 16px;
     position: relative;
     &_promo {
-        color: #fff;
+        color: #000;
         padding-left: 12px;
         padding-top: 1px;
         @include before_circle;
