--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    border: 0;
 }
 
 .container {
@@ -18,6 +19,7 @@
 }
 body {
     position: relative;
+    background: $bg-color;
 }
 .devider {
     width: 60px;
