--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -3,6 +3,7 @@
     width: 100%;
     position: relative;
     padding-top: 18vh;
+    transition: all 5s linear;
     &__mask {
         position: absolute;
         top: 0;
