--- a/src/sass/blocks/_works.scss
+++ b/src/sass/blocks/_works.scss
@@ -34,6 +34,8 @@
         }
         img {
             max-width: 100%;
+            border-radius: 20px;
+
         }
         &:hover {
             filter: blur(0);
