--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,4 @@
-@import './variables.scss';
-@import './mixins.scss';
-
+// Variables and mixins are imported automatically via vite.config.js additionalData
 // Reset и базовые стили
 * {
   margin: 0;
@@ -20,7 +18,7 @@ body {
   color: $text-light;
   background-color: $bg-light;
   @include transition(background-color, color);
-  
+
   // Dark theme
   &.dark-theme {
     color: $text-dark;
@@ -29,7 +27,12 @@ body {
 }
 
 // Семантические элементы
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 600;
   line-height: 1.2;
   margin-bottom: map-get($spacings, 2);
@@ -37,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2.5rem;
-  
+
   @include respond-to(md) {
     font-size: 3.5rem;
   }
@@ -45,7 +48,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  
+
   @include respond-to(md) {
     font-size: 2.5rem;
   }
@@ -53,7 +56,7 @@ h2 {
 
 h3 {
   font-size: 1.75rem;
-  
+
   @include respond-to(md) {
     font-size: 2rem;
   }
@@ -67,7 +70,7 @@ a {
   color: $primary-color;
   text-decoration: none;
   @include transition(color);
-  
+
   &:hover {
     text-decoration: underline;
   }
@@ -89,12 +92,11 @@ img {
 }
 
 // Оптимизация для производительности
-img[loading="lazy"] {
+img[loading='lazy'] {
   opacity: 0;
   transition: opacity 0.3s;
-  
+
   &.loaded {
     opacity: 1;
   }
 }
-
