--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -198,7 +198,7 @@
     background: $secondary-color;
     border-radius: 2px;
     position: absolute;
-    top: 8px;
+    bottom: 8px;
     left: 50%;
     transform: translateX(-50%);
     animation: scroll 2s infinite;
@@ -259,6 +259,6 @@
   }
   100% {
     opacity: 0;
-    transform: translateX(-50%) translateY(20px);
+    transform: translateX(-50%) translateY(-20px);
   }
 }
