--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -17,19 +17,14 @@
   &__filter {
     @include button-base;
     background-color: transparent;
-    border: 1px solid $border-light;
-    color: $text-light;
-
-    .dark-theme & {
-      border-color: $border-dark;
-      color: $text-dark;
-    }
+    border: 1px solid var(--border-color);
+    color: var(--text-primary);
 
     &.active,
     &:hover {
-      background-color: $primary-color;
-      color: white;
-      border-color: $primary-color;
+      background-color: var(--color-primary);
+      color: var(--bg-surface);
+      border-color: var(--color-primary);
     }
   }
 
@@ -48,15 +43,11 @@
   }
 
   &__card {
-    background-color: $bg-secondary-light;
+    background-color: var(--bg-surface);
     border-radius: 8px;
     overflow: hidden;
     @include box-shadow(1);
     @include transition(transform, box-shadow);
-
-    .dark-theme & {
-      background-color: $bg-secondary-dark;
-    }
 
     &:hover {
       transform: translateY(-5px);
@@ -79,15 +70,11 @@
 
     &-description {
       margin-bottom: map-get($spacings, 2);
-      color: $secondary-color;
-
-      .dark-theme & {
-        color: rgba($text-dark, 0.7);
-      }
+      color: var(--text-secondary);
     }
 
     &-link {
-      color: $primary-color;
+      color: var(--color-primary);
       font-weight: 500;
 
       &:hover {
